# causal_pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: README.md
reports/: final_report_skeleton.md
src/causal_pipeline/: __init__.py  interfaces.py
src/causal_pipeline/application/: __init__.py  lalonde_dag_mock.py  lalonde_main.py
src/causal_pipeline/baselines/: __init__.py  predictive.py
src/causal_pipeline/counterfactuals/: __init__.py  scm.py  three_step.py
src/causal_pipeline/estimation/: __init__.py  aipw.py  backdoor.py  ipw.py  propensity.py
src/causal_pipeline/structure_learning/: __init__.py  ci_tests.py  ges.py  pc_algorithm.py
src/causal_pipeline/utils/: __init__.py  data_loading.py  viz.py
tests/: conftest.py  test_counterfactuals.py  test_estimation.py  test_sanity.py  test_structure_learning.py
