[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal_pipeline"
version = "0.1.0"
description = "End-to-end causal inference pipeline applied to Lalonde dataset"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Persona A" },
    { name = "Persona B" },
    { name = "Persona C" },
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "networkx>=3.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "jupyter>=1.0",
    "ipython>=8.20",
]

# Solo para benchmark / sanity check, NO usar como implementación
benchmark = [
    "causal-learn>=0.1.3",
    "dowhy>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/causal_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: end-to-end integration tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]
